style.css
* {
    margin: 0;
    padding: 0;
    /* border: 2px solid red; */
}

html {
    box-sizing: border-box;
}

body {
    color: rgb(150, 150, 150);
    font-family: sans-serif, 'Courier New', Courier; 
    display: flex;
    justify-content: center;
}

video {
    /* position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    transform: translate(-50%, -50%); */

    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.wrapper {
    background: rgba(21, 21, 21, 0.8);

    flex: 100  auto;
    display: flex;
    align-items: start;
    justify-content: space-between;
    min-height: 100%;
    gap: 15px;  
    padding: 0 30px;

    z-index: 1;
    position: relative;
}

.flex-placeholder-left,
.flex-placeholder-right {
    flex: 1 1 35%;
}

/*================ HEADER ================*/

header {
    position: sticky;
    height: 100vh;
    top: 0;
    display: flex;
    flex: 0 0 50%;
    flex-direction: column;
    justify-content: space-between;    
}

.header-container {
    flex: 0 0 auto;
    padding-top: 96px;
}

/* .photo-name {
    display: flex;
}

.headshot {
    align-self: center;
    height: 96px;
    border-radius: 100%;
} */

.my-name {
    display: flex;
    align-self: center;
    font-size: 45px;
    font-weight: 800;
}

.job-title {
    color: white;
    font-size: 20px;
    font-weight: 300;
    margin-top: 13px;
}

nav {
    display: inline-flex;
    flex-direction: column;
    margin: 60px 0 0 0;
    font-size: 12px;
    font-weight: 700;
}

nav a {
    display: flex;
    flex: 0 1 auto;
    padding: 16px 0;
    color:rgb(150, 150, 150);
    font-weight: 800;
}

a.active {
    color: rgb(254, 254, 254);
    font-weight: 800;
    font-size: 18px;
}

.social {
    display: inline-flex;
    flex: 0 1 auto;
    justify-content: space-around;
    align-self: flex-start;
    gap: 16px;
    padding-bottom: 96px;
}

header p {
    display: inline-flex;   
    max-width: 20rem;
    font-size: 16px;
    font-weight: 200;
    margin-top: 1rem;
}

/*================ MAIN ================*/

main {
    display: flex;
    flex: 0 1 50%; 
    flex-direction: column;
    padding: 96px 0;

    }

/*========================*/

.about {
    scroll-margin-top: 96px;
}

/*========================*/

.experience {
    scroll-margin-top: 96px;

}

.job-period {
    margin-top: 2px;
}

/* .job-period p:first-child {
    margin-bottom: 5px;
} */

.job-period p {
    font-weight: 500;
    font-size: 14px;
    font-family: 'Gill Sans', 'Courier New', Courier;
}

.experience-info {
    flex: 0 1 70%;
}

.experience-job-title {
    font-size: 18px;
    color: white;
    font-weight: 500;
}

.experience-description {
    font-size: 14px;
}

.experience-skills ul{
    list-style: none;
    display: flex;
    flex-wrap: wrap;
}

.experience-skills li {
    font-size: 14px;
    font-weight: 400;
    padding: 5px 8px;
    margin: 0 7px 7px 0;
    color:rgb(255, 207, 255);
    background: rgb(54, 0, 146);
    border-radius: 15px;
}


/*========================*/

.skills {
    scroll-margin-top: 96px;
   
}

.skills-container {
    display: flex;
    flex-wrap: wrap;
    gap: 60px; 
}

.skill {
    line-height: 1.5;
}

.skill p {
    font-size: 16px;
    color: aliceblue;
    font-weight: 500;
}

.skill ul {
    padding-top: 16px;
    padding-left: 16px;
}

/*========================*/

.projects {
    scroll-margin-top: 96px;    
}

.project {
    display: flex;
    justify-content: center;
    align-items: center;
}

.project img {
    flex: 1 1 auto;
    height: 80px;
    border-radius: 10px;
    margin-right: 16px;
}

.project h3 {
    color: aliceblue;
    margin-bottom: 14px;
    font-weight: 500;
    font-size: 16px;
}

.project p {
    font-size: 14px;
}

/*========================*/

.hobbies {
    scroll-margin-top: 96px;
}

.hobby {
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.hobby img {
    flex: 1 1 auto;
    height: 90px;
    border-radius: 10px;
    margin-right: 16px;
    
}

.hobby a {
    font-size: 16px;
    font-weight: 400;
    align-self: center;
}

footer p {
    font-size: 0.9rem;
    color: rgba(255, 255, 255, 0.4);
}

/*======================================*/

section h3 {
    display: none;
}

.container {
    padding: 15px;
}

.container:hover {
    background: rgba(255, 255, 255, 0.150);
    border-radius: 8px;
    transition: .15s;
}

a {
    font-weight: 400;
    text-decoration: none;
    color: white;
    transition: .3s;
}

a:hover {
    color: red;
    
}

p {
    font-weight: 300;
    font-size: 16px;
    line-height: 1.6;
    color:  rgb(180, 180, 180);
}

li {
    font-weight: 200;
}

.mb-16px {
    margin-bottom: 1rem;
}

.mb-48px {
    margin-bottom: 3rem;
}

.mb-96px {
    margin-bottom: 6rem;
}

/*================ SMALLER SCREEN ================*/

@media all and (max-width: 1020px) {
    
    .wrapper {
        flex-direction: column;
        max-width: 90%;
    }

    .flex-placeholder-left,
    .flex-placeholder-right {
        display: none;
    }

    section h3 {
        display: block;
        font-size: 14px;
        color: white;
        padding-bottom: 16px;
        font-weight: 600;
    }

    header {
        position: relative;
        flex: 1;
        justify-content: start;
        height: auto;
    }

    .header-container {
        padding: 48px 0 0 0;
    }

    nav {
        display: none;
    }

    .social {
        padding: 0;
        padding-top: 16px;
    }

    .experience {
        flex-direction: column;
    }

    .skill {
        justify-content: space-between;
    }

    .project {
        flex-direction: column-reverse;
    }

    .project img {
        flex: 1 1 150px;
        align-self: start;
    }

    .project p {
        padding: p;
        margin-bottom: 16px;
    }
}

